--- a/style.css
+++ b/style.css
@@ -2,64 +2,91 @@
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
-    
-  }
-  
-  body {
+
+}
+
+body {
     font-family: Arial;
     margin: 0;
-  }
-  
-  header {
+}
+
+header {
     padding: 40px;
+    text-align: center;
+    background: #093b50;
+    color: #fff;
+}
+
+footer {
+    padding: 10px;
     text-align: center;
     background: #093b50;
     color: #fff;
 
 }
+nav {
+    text-align: center;
+    text-decoration: none;
+    background-color: grey;
+}
+
 a {
     text-decoration: none;
     text-align: inline;
 }
+
 .resize {
     width: 200px;
     height: 200px;
     text-align: center;
     flex-wrap: wrap;
 }
+
 .navigation {
-    color:rgb(57, 57, 183);
+    color: rgb(57, 57, 183);
 }
+
 .sections {
-    flex: 4;
+    flex: 2;
     background-color: #ffffff36;
-    padding: 20px;
+    /* padding: 20px; */
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-  }
-  .projects {
-    border-style: solid;
+}
+
+.projects {
+    border-style: groove;
+    border-color: black;
     border-width: 1px;
     border-radius: 10px;
     padding: 10px;
-    flex: 0 0 400px;
-  }
-  
-  .projects header {
+    flex: 0 0 500px;
+}
+
+.projects header {
     padding: 20px;
-  }
-  
-  .projects p {
+}
+
+.projects p {
     text-align: center;
-  }
-  
-  .projects img {
+}
+
+.projects img {
     width: 100%;
-  }
-  @media screen and (max-width: 768px) {
+}
+
+#contact-info,
+#email {
+    text-align: center;
+
+
+}
+
+@media screen and (max-width: 768px) {
+
     main,
     nav {
-      flex-direction: column;
+        flex-direction: column;
     }
-  }
+}
