--- a/style.css
+++ b/style.css
@@ -1,16 +1,19 @@
+/*this the universal selector for the entire page */
 * {
     box-sizing: border-box;
 }
 
+/*this is styling for the body element*/
 body {
     font-family: Arial;
     margin: 0;
 }
 
+/* this is the styling for the header element which is the header for the webpage*/
 header {
     padding: 10px;
     text-align: center;
-   background-color: rgba(64, 9, 66, 0.3) ;
+    background-color: rgba(64, 9, 66, 0.3);
     color: #090909;
     position: fixed;
     width: 100%;
@@ -18,25 +21,29 @@ header {
     left: 0;
 }
 
-   
+/* this is the styling for the nav element which is the navigation bar on the webpage */
 nav {
     display: flex;
     background-color: #13293d;
     margin: 0 auto;
 }
 
+/* this is the styling for the nav element unordered list which is the links in the navigation bar 
+that scrolls the screen between about me, contact info, and projects. */
 nav ul {
     display: flex;
     width: 100%;
     justify-content: space-around;
 }
 
+/* this is the styling for the list elements in the nav and section elements which are for the 
+navigation bar and the project sections of the page */
 nav ul li,
-section ul li  {
+section ul li {
     list-style: none;
 }
 
-
+/* this is the styling for the a elements */
 a {
     color: #f6f8fa;
     padding: 14px 20px;
@@ -44,38 +51,44 @@ a {
     text-align: center;
 }
 
-
+/* this is the styling for the main element  */
 main {
     display: flex;
     flex-wrap: wrap;
     padding-top: 150px;
 }
 
+/* this is the styling for the aside element which is the box on the left hand side of the webpage */
 aside {
     flex: 1;
     background-color: #b9c6ae;
     padding: 80px;
     text-align: center;
 }
+
+/* this is styling for all the h3 elements on the page which are the headers for the projects section */
 h3 {
     text-align: center;
     background: #13293d;
     color: #fff;
 }
+
+/* this is styling for the footer element which is located at the bottom of the webpage */
 footer {
     padding: 0px;
     text-align: center;
     background: #13293d;
     color: #fff;
-    
+
 }
 
+/* this is styling for the elements with a class of resize which is the profile image */
 .resize {
     width: 400px;
     height: 400px;
 }
 
-
+/* this is styling for the element with a class of projects which are the boxes the projects were encased in */
 .projects {
     border-style: solid;
     border-width: 1px;
@@ -84,21 +97,19 @@ footer {
 
 }
 
+/* this is styling for the elements with a class of projects header which are the projects headers for the boxes */
 .projects header {
     padding: 20px;
 }
-
-.projects p {
-    text-align: center;
-}
-
+/* this is the styling for the elements with a class of projects images which are the pictures */
 .projects img {
     width: 100%;
 }
-
+/* this is the styling for the element with an id of contact-info */
 #contact-info {
     display: block;
 }
+/* this is the styling for the element with an id of my-projects */
 #my-projects {
     flex: 2;
     background-color: #fff;
@@ -107,7 +118,7 @@ footer {
     flex-wrap: wrap;
     justify-content: center;
 }
-
+/* this is the media query for the changes made so the webpage can be viewed on a tablet */
 @media screen and (max-width: 768px) {
 
     main,
@@ -116,12 +127,13 @@ footer {
         background-color: rgb(82, 10, 82);
     }
 }
+/* this is the media query for the changes made so the webpage can be viewed on a mobile */
 @media screen and (max-width: 576px) {
 
     main,
     nav {
         flex-direction: column;
-        background-color:  #4e663a;
+        background-color: #4e663a;
 
     }
 }
